update style sheet
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@3158 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/impressionstyle.css
+++ b/impressionstyle.css
@@ -16,7 +16,7 @@ tr.impression_even td {
   color: #639ACE; }
 
 .impression_articleTitle {
-  background-color: #E8E6E2;
+  background-color: #F2E2A0;
   font-size: 14px;
   font-weight: bold;
   text-align: left;
