--- a/templates/blocks/impression_block_spot.html
+++ b/templates/blocks/impression_block_spot.html
@@ -1,6 +1,6 @@
 <link href="<{$xoops_url}>/modules/impression/impressionstyle.css" rel="stylesheet" type="text/css" />
 <{foreach item=article from=$block.article}>
-<div class="even"><{$article.title}></div>
+<div class="impression_articleTitle"><{$article.title}></div>
 <table width="100%" border="0" cellpadding="0" cellspacing="0" >
   <tr>
     <td>
