--- a/templates/impression_singlearticle.html
+++ b/templates/impression_singlearticle.html
@@ -1,12 +1,12 @@
 <link href="<{$xoops_url}>/modules/<{$dirname}>/impressionstyle.css" rel="stylesheet" type="text/css" />
-<!-- <{if $article.imageheader != ""}>
+<{if $article.imageheader != ""}>
      <div class="impression_header"><{$article.imageheader}></div>
 <{/if}>
 <div class="impression_path">
      <div style="float: left;">&nbsp;<{$article.path}></div>
      <div style="float: right;"><{$back}>&nbsp;</div>
 </div>
-<div>&nbsp;</div>   -->
+<div>&nbsp;</div>
 
 <div class="impression_articleTitle"><{$article.title}><{$article.icons}></div>
 <table width="100%" class="impression_articleMain">
