Changed <meta name="robots" content="<{$xoops_meta_robots}>" /> into <meta name="robots" content="noindex,nofollow" />
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@3222 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/templates/impression_print.html
+++ b/templates/impression_print.html
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=<{$xoops_charset}>" />
 <meta http-equiv="content-language" content="<{$xoops_langcode}>" />
-<meta name="robots" content="<{$xoops_meta_robots}>" />
+<meta name="robots" content="noindex,nofollow" />
 <meta name="keywords" content="<{$xoops_meta_keywords}>" />
 <meta name="description" content="<{$xoops_meta_description}>" />
 <meta name="rating" content="<{$xoops_meta_rating}>" />
