--- a/templates/impression_index.html
+++ b/templates/impression_index.html
@@ -20,7 +20,7 @@
 
    <td> <div>
    <div style="float: left; font-size: 14px;"> <a href="<{$xoops_url}>/modules/<{$module_dir}>/catview.php?cid=<{$category.id}>"><b><{$category.title}></b></a></div>
-   <div style="float: right;">&nbsp;<small>(<{$category.totalarticles}><{$smarty.const._MD_IMPRESSION_ARTICLESCAT}>)</small></div></div> <br /><br />
+   <{if $category.showartcount}><div style="float: right;">&nbsp;<small>(<{$category.totalarticles}><{$smarty.const._MD_IMPRESSION_ARTICLESCAT}>)</small></div><{/if}></div> <br /><br />
    <div style="text-align: left; font-size: 11px;"><{$category.alttext}></div>
 
     <{if $category.subcategories}> 
