--- a/templates/impression_singlearticle.html
+++ b/templates/impression_singlearticle.html
@@ -12,7 +12,7 @@
 <table width="100%" class="impression_articleMain">
 <tr><td>
 
-     <div align="right"><small><{$smarty.const._MD_IMPRESSION_PUBLISHED}><{$article.updated|wordwrap:50:"\n":true}>&nbsp;by&nbsp;<{$article.submitter}>&nbsp;<{$article.hits|wordwrap:50:"\n":true}></small></div>
+     <div align="right"><small><{$smarty.const._MD_IMPRESSION_PUBLISHEDON}><{$article.updated|wordwrap:50:"\n":true}><{$smarty.const._MD_IMPRESSION_BY}><{$article.submitter}>&nbsp;<{$article.hits|wordwrap:50:"\n":true}></small></div>
           <div>&nbsp;</div>
      <div><{$article.introtext}></div>
           <div>&nbsp;</div>
