minor updates to templates and lang defines
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@3364 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/templates/impression_singlearticle.html
+++ b/modules/impression/templates/impression_singlearticle.html
@@ -12,7 +12,7 @@
 <table width="100%" class="impression_articleMain">
 <tr><td>
 
-     <div align="right"><small><{$smarty.const._MD_IMPRESSION_PUBLISHED}><{$article.updated|wordwrap:50:"\n":true}>&nbsp;by&nbsp;<{$article.submitter}>&nbsp;<{$article.hits|wordwrap:50:"\n":true}></small></div>
+     <div align="right"><small><{$smarty.const._MD_IMPRESSION_PUBLISHEDON}><{$article.updated|wordwrap:50:"\n":true}><{$smarty.const._MD_IMPRESSION_BY}><{$article.submitter}>&nbsp;<{$article.hits|wordwrap:50:"\n":true}></small></div>
           <div>&nbsp;</div>
      <div><{$article.introtext}></div>
           <div>&nbsp;</div>
