--- a/modules/impression/templates/impression_articleload.html
+++ b/modules/impression/templates/impression_articleload.html
@@ -6,7 +6,7 @@
 <div class="impression_articleTitle"><{$article.readarticle}><{$article.icons}></div>
 <table width="100%" border="0" cellpadding="0" cellspacing="0" class="impression_articleMain">
   <tr>
-    <td><div align="right"><small>Published by&nbsp;<b><{$article.submitter}></b>&nbsp;on&nbsp;<{$article.updated|wordwrap:50:"\n":true}>&nbsp;<{$article.hits|wordwrap:50:"\n":true}>&nbsp;</small></div></td>
+    <td><div align="right"><small><{$smarty.const._MD_IMPRESSION_PUBLISHEDON}><{$article.updated|wordwrap:50:"\n":true}><{$smarty.const._MD_IMPRESSION_BY}><{$article.submitter}>&nbsp;<{$article.hits|wordwrap:50:"\n":true}>&nbsp;</small></div></td>
   </tr>
   <tr>
     <td><div style="padding: 5px;" valign="top"><{$article.introtext}></div></td>
