Misc changes & fixes, mainly to blocks
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@3370 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/templates/blocks/impression_block_new.html
+++ b/modules/impression/templates/blocks/impression_block_new.html
@@ -1,10 +1,10 @@
 <link href="<{$xoops_url}>/modules/impression/impressionstyle.css" rel="stylesheet" type="text/css" />
 <div  class="outer">
 <table border="0" cellspacing="1" cellpadding="0"">
-  <tr height="14px" class="even" style="font-size: 10px; font-weight: bold;">
-      <td width="20%" style="padding-left: 4px;" class="impression_articleTitle"><{$smarty.const._MB_IMPRESSION_CATEGORY}></td>
-      <td width="68%" class="impression_articleTitle"><{$smarty.const._MB_IMPRESSION_ARTICLE}></td>
-      <td width="12%" align="center" class="impression_articleTitle"><{$smarty.const._MB_IMPRESSION_DATE}></td>
+  <tr height="14px" class="even" style="font-size: 12px; font-weight: bold;">
+      <td width="20%" style="padding-left: 4px;" class="even"><b><{$smarty.const._MB_IMPRESSION_CATEGORY}></b></td>
+      <td width="68%" class="even"><b><{$smarty.const._MB_IMPRESSION_ARTICLE}></b></td>
+      <td width="12%" align="center" class="even"><b><{$smarty.const._MB_IMPRESSION_DATE}></b></td>
   </tr>
 
   <{foreach item=articlenew from=$block.articlenew}>
