--- a/templates/blocks/impression_block_spot.html
+++ b/templates/blocks/impression_block_spot.html
@@ -4,7 +4,7 @@
 <table width="100%" border="0" cellpadding="0" cellspacing="0" >
   <tr>
     <td>
-    <div align="right"><small>Published on&nbsp;<{$article.date|wordwrap:50:"\n":true}>&nbsp;(<{$article.hits|wordwrap:50:"\n":true}>&nbsp;reads)</small>&nbsp;</div></td>
+    <div align="right"><small><{$smarty.const._MB_IMPRESSION_PUBLISHEDON}><{$article.date|wordwrap:50:"\n":true}><{$smarty.const._MB_IMPRESSION_BY}><{$article.submitter}>&nbsp;<{$article.hits|wordwrap:50:"\n":true}>&nbsp;</small>&nbsp;</div></td>
   </tr>
   <tr>
     <td><div style="padding: 4px;text-align: left;" valign="top"><{$article.introtext}></div></td>
@@ -16,10 +16,5 @@
     </div>
 <div style="height: 4px;">&nbsp;</div>
 <{/foreach}>
-<div align="center" style="padding: 2px;">
-<a href="<{$xoops_url}>/modules/rss/rss.php" alt="Get RSS news feed" target="_blank"><img src="<{$xoops_url}>/modules/impression/images/icon/rss.gif" /></a>&nbsp;
-<a href="http://fusion.google.com/add?feedurl=<{$xoops_url}>/modules/rss/rss.php"><img src="<{$xoops_url}>/modules/impression/images/rss_icons/google.gif" alt="Google Reader or Homepage" border="0"></a>&nbsp;
-<a href="http://add.my.yahoo.com/rss?url=<{$xoops_url}>/modules/rss/rss.php"><img src="<{$xoops_url}>/modules/impression/images/rss_icons/yahoo.gif" border="0" alt="Add to My Yahoo!"></a>&nbsp;
-<a href="http://www.newsgator.com/ngs/subscriber/subext.aspx?url=<{$xoops_url}>/modules/rss/rss.php"><img src="<{$xoops_url}>/modules/impression/images/rss_icons/newsgator.gif" alt="Subscribe in NewsGator Online" border="0"></a>&nbsp;
-<a href="http://feeds.my.aol.com/add.jsp?url=<{$xoops_url}>/modules/rss/rss.php"><img src="<{$xoops_url}>/modules/impression/images/rss_icons/aol2.gif" alt="Add to My AOL" border="0"></a>&nbsp;
-<a href="http://www.live.com/?add=<{$xoops_url}>/modules/rss/rss.php"><img style="width: 92px; height: 17px;" src="<{$xoops_url}>/modules/impression/images/rss_icons/windowslive.gif" border="0"></a></div>
+
+<{if $article.rssicons}><{$article.showrss}><{/if}>
