--- a/templates/impression_catview.html
+++ b/templates/impression_catview.html
@@ -30,22 +30,22 @@
 <div align="center" style="vertical-align: middle;"><small>
 <b><{$smarty.const._MD_IMPRESSION_SORTBY}></b>&nbsp;<{$smarty.const._MD_IMPRESSION_TITLE}> (
 <a href="catview.php?cid=<{$category_id}>&orderby=titleA">
-<img src="images/up.png" align="middle" alt="" /></a>
+<img src="images/up.gif" align="middle" alt="" /></a>
 <a href="catview.php?cid=<{$category_id}>&orderby=titleD">
-<img src="images/down.png" align="middle" alt="" /></a>
+<img src="images/down.gif" align="middle" alt="" /></a>
 )
 &nbsp;
 <{$smarty.const._MD_IMPRESSION_DATE}> (
 <a href="catview.php?cid=<{$category_id}>&orderby=dateA">
-<img src="images/up.png" align="middle" alt="" /></a>
+<img src="images/up.gif" align="middle" alt="" /></a>
 <a href="catview.php?cid=<{$category_id}>&orderby=dateD">
-<img src="images/down.png" align="middle" alt="" /></a>
+<img src="images/down.gif" align="middle" alt="" /></a>
 )
 &nbsp;
 <{$smarty.const._MD_IMPRESSION_POPULARITY}> (
 <a href="catview.php?cid=<{$category_id}>&orderby=hitsA">
-<img src="images/up.png" align="middle" alt="" /></a><a href="catview.php?cid=<{$category_id}>&orderby=hitsD">
-<img src="images/down.png" align="middle" alt="" /></a>
+<img src="images/up.gif" align="middle" alt="" /></a><a href="catview.php?cid=<{$category_id}>&orderby=hitsD">
+<img src="images/down.gif" align="middle" alt="" /></a>
 )</small></div>
 <div align="center" style="vertical-align: middle;font-size: smaller;"><{$lang_cursortedby}></div>
 <br />
