--- a/modules/impression/templates/impression_index.html
+++ b/modules/impression/templates/impression_index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="<{$smarty.const.impression_url}>/impressionstyle.css" />
+<link href="<{$xoops_url}>/modules/<{$dirname}>/impressionstyle.css" rel="stylesheet" type="text/css" />
 <{if $catarray.imageheader != ""}>
 <div class="impression_header"><{$catarray.imageheader}></div>
 <{/if}> 
@@ -9,17 +9,16 @@
 <{if count($categories) gt 0}> 
 <div class="even" style="font-weight: bold;"><{$smarty.const._MD_IMPRESSION_MAINLISTING}></div>
 
-  <!-- Start category loop -->
-
+<!-- Start category loop -->
 <table width="100%" cellspacing="5" cellpadding="3">
 <{foreach item=category from=$categories}>
 
  <tr>
    <td width="2%">
-    <div  style="text-align: center;"><a href="<{$xoops_url}>/modules/<{$module_dir}>/catview.php?cid=<{$category.id}>"><img src="<{$category.image}>" alt="<{$category.title}>" title="<{$category.title}>" align="top" /></a></div>  </td>
+    <div  style="text-align: center;"><a href="<{$xoops_url}>/modules/<{$dirname}>/catview.php?cid=<{$category.id}>"><img src="<{$category.image}>" alt="<{$category.title}>" title="<{$category.title}>" align="top" /></a></div>  </td>
 
    <td> <div>
-   <div style="float: left; font-size: 14px;"> <a href="<{$xoops_url}>/modules/<{$module_dir}>/catview.php?cid=<{$category.id}>"><b><{$category.title}></b></a></div>
+   <div style="float: left; font-size: 14px;"> <a href="<{$xoops_url}>/modules/<{$dirname}>/catview.php?cid=<{$category.id}>"><b><{$category.title}></b></a></div>
    <{if $category.showartcount}><div style="float: right;">&nbsp;<small>(<{$category.totalarticles}><{$smarty.const._MD_IMPRESSION_ARTICLESCAT}>)</small></div><{/if}></div> <br /><br />
    <div style="text-align: left; font-size: 11px;"><{$category.alttext}></div>
 
@@ -33,11 +32,7 @@
 
  <{/foreach}>
   <!-- End category loop --> 
-
-
 </table>
-
-
 
 <div style="text-align: left; font-size: smaller; padding: 8px;"><{$lang_thereare}></div>
 <{/if}>
