--- a/modules/impression/templates/impression_singlearticle.html
+++ b/modules/impression/templates/impression_singlearticle.html
@@ -1,7 +1,9 @@
-<link href="<{$xoops_url}>/modules/<{$dirname}>/impressionstyle.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" type="text/css" href="<{$smarty.const.impression_url}>/impressionstyle.css" />
+
 <{if $article.imageheader != ""}>
      <div class="impression_header"><{$article.imageheader}></div>
 <{/if}>
+
 <div class="impression_path">
      <div style="float: left;">&nbsp;<{$article.path}></div>
      <div style="float: right;"><{$back}>&nbsp;</div>
@@ -20,9 +22,16 @@
 
 </td></tr>
 <tr><td>
-     <{if $article.showsbookmarx > 0}>
-          <div class="impression_socbookmark" align="center"><{$article.sbmarks}></div>
-     <{/if}>
+        <{if $tagbar}>
+	      <div style="padding: 4px; font-size: smaller;">
+                   <{include file="db:tag_bar.html"}>
+              </div>
+	<{/if}>
+        <{if $article.showsbookmarx > 0}>
+             <div class="impression_socbookmark" align="center">
+                  <{$article.sbmarks}>
+             </div>
+        <{/if}>
 </td></tr>
 </table>
 <div class="impression_articleFooter"><{$article.pdf}>&nbsp;<{$article.print}>&nbsp;<{$article.recommend}><{if $xoops_isadmin}> <small><{$article.adminarticle}></small><{/if}>&nbsp;</div>
