--- a/templates/impression_catview.html
+++ b/templates/impression_catview.html
@@ -13,7 +13,7 @@
    <{foreach item=subcat from=$subcategories}>
 
     <td width="2%">
-    <div  style="text-align: center;"><a href="<{$xoops_url}>/modules/<{$dirname}>/catview.php?cid=<{$subcat.id}>"><img src="<{$subcat.image}>" alt="<{$category.title}>" title="<{$category.title}>" align="top" /></a></div>  </td>
+    <div  style="text-align: center;"><a href="<{$xoops_url}>/modules/<{$dirname}>/catview.php?cid=<{$subcat.id}>"><img src="<{$subcat.image}>" alt="<{$subcat.title}>" title="<{$subcat.title}>" align="top" /></a></div>  </td>
 
    <td> <div>
    <div style="float: left; font-size: 14px;"> <a href="<{$xoops_url}>/modules/<{$dirname}>/catview.php?cid=<{$subcat.id}>"><b><{$subcat.title}></b></a></div>
