--- a/modules/impression/templates/impression_catview.html
+++ b/modules/impression/templates/impression_catview.html
@@ -1,4 +1,4 @@
-<link href="<{$xoops_url}>/modules/<{$dirname}>/impressionstyle.css" rel="stylesheet" type="text/css" />
+<link href="<{$xoops_url}>/modules/<{$module_dir}>/impressionstyle.css" rel="stylesheet" type="text/css" />
 <{if $catarray.imageheader != ""}>
 	<br /><div align="center"><{$catarray.imageheader}></div><br />
 <{/if}>
@@ -13,22 +13,22 @@
    <{foreach item=subcat from=$subcategories}>
 
     <td width="2%">
-    <div  style="text-align: center;"><a href="<{$xoops_url}>/modules/<{$dirname}>/catview.php?cid=<{$subcat.id}>"><img src="<{$subcat.image}>" alt="<{$subcat.title}>" title="<{$subcat.title}>" align="top" /></a></div>  </td>
+    <div  style="text-align: center;"><a href="<{$xoops_url}>/modules/<{$subcat.module_dir}>/catview.php?cid=<{$subcat.id}>"><img src="<{$subcat.image}>" alt="<{$subcat.title}>" title="<{$subcat.title}>" align="top" /></a></div>  </td>
 
    <td> <div>
-   <div style="float: left; font-size: 14px;"> <a href="<{$xoops_url}>/modules/<{$dirname}>/catview.php?cid=<{$subcat.id}>"><b><{$subcat.title}></b></a></div>
-   <{if $showartcount}><div style="float: right;">&nbsp;<small>(<{$subcat.totalarticles}><{$smarty.const._MD_IMPRESSION_ARTICLESCAT}>)</small></div><{/if}></div> <br /><br />
+   <div style="float: left; font-size: 14px;"> <a href="<{$xoops_url}>/modules/<{$subcat.module_dir}>/catview.php?cid=<{$subcat.id}>"><b><{$subcat.title}></b></a></div>
+   <{if $subcat.showartcount}><div style="float: right;">&nbsp;<small>(<{$subcat.totalarticles}><{$smarty.const._MD_IMPRESSION_ARTICLESCAT}>)</small></div><{/if}></div> <br /><br />
    <div style="text-align: left; font-size: 11px;"><{$subcat.alttext}></div>
 
     <{if $subcat.subcategories}>
-     <div style="font-size: 12px;"><li><{$subcat.subcategories}></li></div>
+     <div style="font-size: 12px;"><{$subcat.subcategories}></div>
     <{/if}><div style="height: 4px;">&nbsp;</div>
 
    </td>
 
- <{if $subcat.count is div by 2}>
+
     </tr><tr>
-     <{/if}>
+
    <{/foreach}>
    </tr>
  </table>    
@@ -95,4 +95,3 @@
 </table>
 
 <{/if}>
-<{include file="db:system_notification_select.html"}>
