--- a/modules/impression/templates/impression_print.html
+++ b/modules/impression/templates/impression_print.html
@@ -35,8 +35,8 @@
          <div style="padding-top: 2px; "><{$lang_author_date}> </div>
     <{/if}>
   </div>
-  <div style="padding-top: 8px; text-align: justify"><{$item.introtext}></div>
-  <div style="padding-top: 8px; text-align: justify"><{$item.description}></div>
+  <div style="padding-top: 8px; text-align: justify; font-weight: bold;"><{$item.introtext}></div>
+  <div style="text-align: justify"><{$item.description}></div>
   <{if $itemfooter}>
        <div style="text-align: center; font-weight: bold; background-color: #E8E6E2; padding: 4px; margin-top: 10px;"><{$itemfooter}></div>
   <{/if}>
