--- a/modules/impression/templates/impression_singlearticle.html
+++ b/modules/impression/templates/impression_singlearticle.html
@@ -11,19 +11,19 @@
 <div>&nbsp;</div>
 
 <div class="impression_articleTitle"><{$article.title}><{$article.icons}></div>
-<table width="100%" class="impression_articleMain">
-<tr><td>
+<div class="impression_articleMain">
+
 
      <div align="right"><small><{$smarty.const._MD_IMPRESSION_PUBLISHEDON}><{$article.updated|wordwrap:50:"\n":true}><{$smarty.const._MD_IMPRESSION_BY}><{$article.submitter}>&nbsp;<{$article.hits|wordwrap:50:"\n":true}></small></div>
-          <div>&nbsp;</div>
-     <div><{$article.introtext}></div>
-          <div>&nbsp;</div>
+<!--          <div>&nbsp;</div>  -->
+     <div><b><{$article.introtext}></b></div>
      <div><{$article.description}></div>
+<!--          <div>&nbsp;</div>
+     <div><{$article.description}></div>    -->
 
-</td></tr>
-<tr><td>
+
         <{if $tagbar}>
-	      <div style="padding: 4px; font-size: smaller;">
+	      <div style="font-size: smaller;">
                    <{include file="db:tag_bar.html"}>
               </div>
 	<{/if}>
@@ -32,8 +32,8 @@
                   <{$article.sbmarks}>
              </div>
         <{/if}>
-</td></tr>
-</table>
+
+</div>
 <div class="impression_articleFooter"><{$article.pdf}>&nbsp;<{$article.print}>&nbsp;<{$article.recommend}><{if $xoops_isadmin}> <small><{$article.adminarticle}></small><{/if}>&nbsp;</div>
 <br />
 <!-- <div align="center"><{if $xoops_isadmin}><{$admintools}><{/if}></div> -->
