replaced XOOPS_ROOT_PATH with ICMS_ROOT_PATH
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@3649 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/impressionstyle.css
+++ b/impressionstyle.css
@@ -41,6 +41,7 @@ tr.impression_even td {
 .impression_articleMain {
   display: table;
   padding-left:6px;
+  padding-right:6px;
   padding-bottom: 6px;
   border-left: 1px solid #E8E6E2;
   border-right: 1px solid #E8E6E2;}
