--- a/templates/blocks/impression_block_new.html
+++ b/templates/blocks/impression_block_new.html
@@ -10,7 +10,7 @@
   <{foreach item=articlenew from=$block.articlenew}>
   <tr style="text-align: left; font-size: smaller;">
     <td class="even"><{$articlenew.cattitle}></td>
-    <td class="odd"><{$articlenew.title}><{if $xoops_isadmin}><{$articlenew.adminnewicons}><{/if}></td>
+    <td class="odd"><{$articlenew.title}><{$articlenew.newpopicons}><{if $xoops_isadmin}><{$articlenew.adminnewicons}><{/if}></td>
     <td class="odd" align="center"><{$articlenew.date}></td>
   </tr>
   <{/foreach}>
