--- a/templates/impression_index.html
+++ b/templates/impression_index.html
@@ -23,8 +23,9 @@
    <div style="text-align: left; font-size: 11px;"><{$category.alttext}></div>
 
     <{if $category.subcategories}> 
-     <div style="font-size: 12px;"><li><{$category.subcategories}></li></div>
-    <{/if}><div style="height: 4px; border-bottom: 1px solid #D9D9D9;">&nbsp;</div>
+        <div style="font-size: 12px;"><{$category.subcategories}></div>
+    <{/if}>
+    <div style="height: 4px; border-bottom: 1px solid #D9D9D9;">&nbsp;</div>
 
    </td>
 
