Bunch of fixes. Disabled tag blocks and inline tags.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@3833 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/templates/impression_catview.html
+++ b/modules/impression/templates/impression_catview.html
@@ -2,7 +2,7 @@
 <{if $catarray.imageheader != ""}>
 	<br /><div align="center"><{$catarray.imageheader}></div><br />
 <{/if}>
-<div><{$description}></div><br />
+<div style="font-size: smaller;"><{$description}></div><br />
 <div class='outer'><div class="even" style="font-size: smaller;"><b><{$category_path}></b></div></div><br />
 <{if $subcategories}>
 <fieldset><legend class="impression_legend"><{$smarty.const._MD_IMPRESSION_SUBCATLISTING}></legend>
