--- a/templates/impression_catview.html
+++ b/templates/impression_catview.html
@@ -2,7 +2,7 @@
 <{if $catarray.imageheader != ""}>
 	<br /><div align="center"><{$catarray.imageheader}></div><br />
 <{/if}>
-<div><{$description}></div><br />
+<div style="font-size: smaller;"><{$description}></div><br />
 <div class='outer'><div class="even" style="font-size: smaller;"><b><{$category_path}></b></div></div><br />
 <{if $subcategories}>
 <fieldset><legend class="impression_legend"><{$smarty.const._MD_IMPRESSION_SUBCATLISTING}></legend>
