--- a/templates/impression_singlearticle.html
+++ b/templates/impression_singlearticle.html
@@ -14,24 +14,23 @@
 <div class="impression_articleMain">
 
 
-     <div align="right"><small><{$smarty.const._MD_IMPRESSION_PUBLISHEDON}><{$article.updated|wordwrap:50:"\n":true}><{$smarty.const._MD_IMPRESSION_BY}><{$article.submitter}>&nbsp;<{$article.hits|wordwrap:50:"\n":true}></small></div>
-<!--          <div>&nbsp;</div>  -->
-     <div><b><{$article.introtext}></b></div>
-     <div><{$article.description}></div>
-<!--          <div>&nbsp;</div>
-     <div><{$article.description}></div>    -->
+<div align="right"><small><{$smarty.const._MD_IMPRESSION_PUBLISHEDON}><{$article.updated|wordwrap:50:"\n":true}><{$smarty.const._MD_IMPRESSION_BY}><{$article.submitter}>&nbsp;<{$article.hits|wordwrap:50:"\n":true}></small></div>
+
+<div><b><{$article.introtext}></b></div>
+<div><{$article.description}></div>
 
 
-        <{if $tagbar}>
-	      <div style="font-size: smaller;">
-                   <{include file="db:tag_bar.html"}>
-              </div>
-	<{/if}>
-        <{if $article.showsbookmarx > 0}>
-             <div class="impression_socbookmark" align="center">
-                  <{$article.sbmarks}>
-             </div>
-        <{/if}>
+<!-- <{if $tagbar}>
+  <div style="font-size: smaller;">
+    <{include file="db:tag_bar.html"}>
+  </div>
+<{/if}>    -->
+
+<{if $article.showsbookmarx > 0}>
+  <div class="impression_socbookmark">
+    <{$article.sbmarks}>
+  </div>
+<{/if}>
 
 </div>
 <div class="impression_articleFooter"><{$article.pdf}>&nbsp;<{$article.print}>&nbsp;<{$article.recommend}><{if $xoops_isadmin}> <small><{$article.adminarticle}></small><{/if}>&nbsp;</div>
