Set date and added latest updates/fixes
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@3961 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/templates/blocks/impression_block_new.html
+++ b/modules/impression/templates/blocks/impression_block_new.html
@@ -2,9 +2,9 @@
 <div  class="outer">
 <table border="0" cellspacing="1" cellpadding="0"">
   <tr height="14px" class="even" style="font-size: 12px; font-weight: bold;">
-      <td width="20%" style="padding-left: 4px;" class="even"><b><{$smarty.const._MB_IMPRESSION_CATEGORY}></b></td>
-      <td width="68%" class="even"><b><{$smarty.const._MB_IMPRESSION_ARTICLE}></b></td>
-      <td width="12%" align="center" class="even"><b><{$smarty.const._MB_IMPRESSION_DATE}></b></td>
+      <td style="padding-left: 4px;" class="even"><b><{$smarty.const._MB_IMPRESSION_CATEGORY}></b></td>
+      <td class="even"><b><{$smarty.const._MB_IMPRESSION_ARTICLE}></b></td>
+      <td align="center" class="even"><b><{$smarty.const._MB_IMPRESSION_DATE}></b></td>
   </tr>
 
   <{foreach item=articlenew from=$block.articlenew}>
