Fixed bug in case folder has been renamed
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@3972 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/templates/blocks/impression_block_new.html
+++ b/modules/impression/templates/blocks/impression_block_new.html
@@ -1,4 +1,4 @@
-<link href="<{$xoops_url}>/modules/impression/impressionstyle.css" rel="stylesheet" type="text/css" />
+<link href="<{$xoops_url}>/modules/<{$dirname}>/impressionstyle.css" rel="stylesheet" type="text/css" />
 <div  class="outer">
 <table border="0" cellspacing="1" cellpadding="0"">
   <tr height="14px" class="even" style="font-size: 12px; font-weight: bold;">
