--- a/modules/impression/templates/blocks/impression_block_spot.html
+++ b/modules/impression/templates/blocks/impression_block_spot.html
@@ -1,4 +1,4 @@
-<link href="<{$xoops_url}>/modules/impression/impressionstyle.css" rel="stylesheet" type="text/css" />
+<link href="<{$xoops_url}>/modules/<{$dirname}>/impressionstyle.css" rel="stylesheet" type="text/css" />
 <{foreach item=article from=$block.article}>
 <div class="even"><{$article.title}></div>
 <table width="100%" border="0" cellpadding="0" cellspacing="2" >
