Multiple updates like RSS feeds through icmsfeed.php
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@6106 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/templates/blocks/impression_block_spot.html
+++ b/modules/impression/templates/blocks/impression_block_spot.html
@@ -17,4 +17,4 @@
 <div style="height: 4px;">&nbsp;</div>
 <{/foreach}>
 
-<{if $article.rssicons}><div align="center" style="padding: 2px;"><{$article.showrss}></div><{/if}>
+<div align="center" style="padding: 2px;"><{$article.showrss}></div>
