Activated tag-bar
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@6357 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/templates/impression_singlearticle.html
+++ b/modules/impression/templates/impression_singlearticle.html
@@ -20,11 +20,11 @@
 <div><{$article.description}></div>
 
 
-<!-- <{if $tagbar}>
+<{if $tagbar}>
   <div style="font-size: smaller;">
     <{include file="db:tag_bar.html"}>
   </div>
-<{/if}>    -->
+<{/if}> 
 
 <{if $article.showsbookmarx > 0}>
   <div class="impression_socbookmark">
