Added some padding
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk/modules/impression@6364 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/impressionstyle.css
+++ b/impressionstyle.css
@@ -93,7 +93,8 @@ tr.impression_even td {
 
 /* Bookmark tags */
 div.impression_socbookmark {
-  text-align: center; }
+  text-align: center;
+  padding-top: 10px;}
 
 div.impression_socbookmark a img {
   opacity: .4;
