Updated spotlight block to use RSS config settings
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@7174 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/templates/blocks/impression_block_spot.html
+++ b/modules/impression/templates/blocks/impression_block_spot.html
@@ -17,4 +17,4 @@
 <div style="height: 4px;">&nbsp;</div>
 <{/foreach}>
 
-<div align="center" style="padding: 2px;"><{$article.showrss}></div>
+<div align="center" style="padding: 2px;"><{$article.impression_feed}></div>
