--- a/modules/impression/templates/impression_topten.html
+++ b/modules/impression/templates/impression_topten.html
@@ -1,9 +1,8 @@
 <link href="<{$xoops_url}>/modules/<{$module_dir}>/impressionstyle.css" rel="stylesheet" type="text/css" />
 <{$imageheader}>
 
-
-<div style="padding-top: 10px; float: right;"><{$back}>&nbsp;</div>
-
+<div style="margin-top: 10px; float: right; padding: 2px;"><{$back}></div>
+<div style="clear: both;">&nbsp;</div>
 
 <!-- Start ranking loop --> 
 <{foreach item=ranking from=$rankings}>
@@ -28,4 +27,4 @@
 </table>
 <br /> 
 <{/foreach}> 
-<!-- End ranking loop --> 
+<!-- End ranking loop -->
