Added "Social Share Privacy" and necessary language defines to language/<your_language>/modinfo.php
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@23000 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/templates/impression_singlearticle.html
+++ b/modules/impression/templates/impression_singlearticle.html
@@ -21,6 +21,11 @@
   }
   (document, 'script', 'facebook-jssdk'));
 </script>
+<{elseif $article.showsbookmarks == 3}>
+<!-- Social Share Privacy -->
+<link rel="stylesheet" type="text/css" href="<{$icms_url}>/modules/<{$module_dir}>/socialshareprivacy.css" />
+<script type="text/javascript" src="<{$icms_url}>/modules/<{$module_dir}>/include/jquery.socialshareprivacy.js"></script>
+<script type="text/javascript"> jQuery(document).ready(function($){ if($('#socialshareprivacy').length > 0){ $('#socialshareprivacy').socialSharePrivacy(); } }); </script>
 <{/if}>
 
 <{$article.imageheader}>
