Thank you for adding from the SSP. I improved the display function. You could not see the mouse over window for the preferences. And if you have a list style type from the theme, it will be show into the SSP too. I changed this know and swiched it off.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/impression/trunk@23004 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/modules/impression/socialshareprivacy.css
+++ b/modules/impression/socialshareprivacy.css
@@ -70,6 +70,7 @@
 /* Tooltips begin */
 .social_share_privacy_area li.help_info {
     position: relative; 
+    list-style: none outside none;
 }
 .social_share_privacy_area li.help_info .info, 
 .social_share_privacy_area li .help_info.icon .info {
@@ -138,6 +139,7 @@
 .social_share_privacy_area li.settings_info {
 	position: relative;
 	top: -2px;
+	list-style: none outside none;
 }
 .social_share_privacy_area li.settings_info a {
 	text-decoration: none;
